# starforge

./: Cargo.toml  README.md  ROADMAP.md
starforge-comp/: Cargo.toml  README.md
starforge-comp/src/: main.rs  winit.rs
starforge-config/: Cargo.toml  README.md
starforge-config/src/: lib.rs
starforge-core/: Cargo.toml  README.md
starforge-core/src/: error.rs  lib.rs  state.rs
starforge-core/src/handlers/: compositor.rs  mod.rs  shm.rs  wl_output.rs  wl_seat.rs  xdg_shell.rs
starforge-input/: Cargo.toml
starforge-plugins/: Cargo.toml  README.md
starforge-render/: Cargo.toml  README.md
starforge-render/src/: color.rs  core.rs  error.rs  frame.rs  lib.rs  memory.rs  pipeline.rs  render_pass.rs  renderer.rs  resources.rs  swapchain.rs  sync.rs
starforge-shell/: Cargo.toml  README.md
