[package]
name = "starforge-comp"
version = "0.1.0"
edition = "2024"

[dependencies]
# Local dependencies
starforge-core = { path = "../starforge-core" }
starforge-render = { path = "../starforge-render" }
starforge-config = { path = "../starforge-config" }

# Inherited dependencies from the workspace
smithay = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

# Crate dependencies
tracing-subscriber = "0.3.19"