[package]
name = "starforge-render"
version = "0.1.0"
edition = "2024"

[dependencies]
# Local dependencies
starforge-core = { path = "../starforge-core" }

# Inherited dependencies from the workspace
smithay = { workspace = true }
tracing = { workspace = true }
ash = { version = "0.38" }
vk-mem = { version = "0.4.0" }